<resources>
    <string name="app_name">PracticeAndroidApi</string>
    <string name="welcome_message">ようこそ！</string>
    <string name="welcome_page_title">Welcome Page</string>

    <string name="go_to_timer">タイマー</string>
    <string name="go_to_ble">BLE</string>
    <string name="go_to_page_transition">ページ遷移</string>
    <string name="go_to_chart">チャート</string>
    <string name="text_radar_chart_title">タイトル</string>

    <string name="timer_page_title">Timer</string>
    <string name="timer_start_button">Start</string>

    <string-array name="time_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="ble_connect">接続</string>

    <string name="go_to_page_b">ページBへ</string>
    <string name="go_to_page_c">ページCへ</string>
    <string name="go_to_page_a_normal">ページAへ（通常）</string>
    <string name="go_to_page_a_delete_stacks">ページAへ（スタック削除）</string>
    <string name="go_to_writer">ファイル書き出し</string>
    <string name="write_file">書き出し</string>
    <string name="rerender_button">再描画</string>


</resources>
